@@ -8,10 +8,14 @@ import com.intellij.lang.ant.psi.introspection.AntTypeId;
 import com.intellij.lang.ant.psi.introspection.impl.AntTypeDefinitionImpl;
 import com.intellij.psi.xml.XmlElement;
 import com.intellij.util.StringBuilderSpinAllocator;
+import com.intellij.util.containers.ObjectCache;
 import org.apache.tools.ant.Task;
 import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.io.File;
+import java.lang.ref.SoftReference;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -19,6 +23,8 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class AntTypeDefImpl extends AntTaskImpl implements AntTypeDef {
+
+  private static final ClassCache CLASS_CACHE = new ClassCache();
   private AntTypeDefinitionImpl myNewDefinition;
 
   public AntTypeDefImpl(final AntElement parent, final XmlElement sourceElement, final AntTypeDefinition definition) {
@@ -55,7 +61,7 @@ public class AntTypeDefImpl extends AntTaskImpl implements AntTypeDef {
 
   @Nullable
   public String getClassPath() {
-    return computeAttributeValue(getSourceElement().getAttributeValue("classpath"));
+    return getSourceElement().getAttributeValue("classpath");
   }
 
   @Nullable
@@ -86,8 +92,8 @@ public class AntTypeDefImpl extends AntTaskImpl implements AntTypeDef {
         parent.unregisterCustomType(myNewDefinition);
       }
       myNewDefinition = null;
-      getAntFile().clearCaches();
     }
+    getAntFile().clearCaches();
   }
 
   public AntTypeDefinition getDefinition() {
@@ -102,38 +108,47 @@ public class AntTypeDefImpl extends AntTaskImpl implements AntTypeDef {
 
   @SuppressWarnings({"HardCodedStringLiteral"})
   private void loadClass(final String classname) {
-    ClassLoader loader = getAntFile().getClassLoader().getClassloader();
+    URL[] urls = ClassEntry.EMPTY_URL_ARRAY;
     final String classpath = getClassPath();
     if (classpath != null) {
       try {
-        final URL[] urls;
-        if (classpath.indexOf(':') < 0) {
-          urls = new URL[]{new URL("file://" + classpath)};
+        if (classpath.indexOf(File.pathSeparatorChar) < 0) {
+          final File file = new File(computeAttributeValue(classpath));
+          urls = new URL[]{file.toURL()};
         }
         else {
           final List<URL> urlList = new ArrayList<URL>();
-          for (String url : classpath.split(":")) {
-            urlList.add(new URL("file://" + url));
+          for (final String path : classpath.split(File.pathSeparator)) {
+            final File file = new File(computeAttributeValue(path));
+            urlList.add(file.toURL());
           }
           urls = urlList.toArray(new URL[urlList.size()]);
         }
-        loader = new URLClassLoader(urls, loader);
       }
       catch (MalformedURLException e) {
-        // ignore
+        urls = ClassEntry.EMPTY_URL_ARRAY;
       }
     }
-    Class clazz;
-    try {
-      if (loader == null) {
-        clazz = Class.forName(classname);
+
+    boolean newlyLoaded = false;
+    Class clazz = CLASS_CACHE.getClass(urls, classname);
+    if (clazz == null) {
+      ClassLoader loader = getAntFile().getClassLoader().getClassloader();
+      if (urls.length > 0) {
+        loader = new URLClassLoader(urls, loader);
       }
-      else {
-        clazz = loader.loadClass(classname);
+      try {
+        if (loader == null) {
+          clazz = Class.forName(classname);
+        }
+        else {
+          clazz = loader.loadClass(classname);
+        }
+        newlyLoaded = true;
       }
-    }
-    catch (Exception e) {
-      clazz = null;
+      catch (Exception e) {
+        clazz = null;
+      }
     }
     final String name = getDefinedName();
     final String uri = getUri();
@@ -150,6 +165,68 @@ public class AntTypeDefImpl extends AntTaskImpl implements AntTypeDef {
       if (parent != null) {
         parent.registerCustomType(myNewDefinition);
       }
+      if (newlyLoaded) {
+        CLASS_CACHE.setClass(urls, classname, clazz);
+      }
+    }
+  }
+
+  private static class ClassEntry {
+    public static final URL[] EMPTY_URL_ARRAY = new URL[0];
+    private final URL[] myUrls;
+    private final String myClassname;
+
+    public ClassEntry(@NotNull final URL[] urls, @NotNull final String classname) {
+      myUrls = urls;
+      myClassname = classname;
+    }
+
+    public final int hashCode() {
+      int hc = myClassname.hashCode();
+      for (final URL url : myUrls) {
+        hc += url.hashCode();
+      }
+      return hc;
+    }
+
+    public final boolean equals(Object obj) {
+      if (!(obj instanceof ClassEntry)) return false;
+      final ClassEntry entry = (ClassEntry)obj;
+      if (!myClassname.equals(entry.myClassname)) return false;
+      if (myUrls.length != entry.myUrls.length) return false;
+      for (final URL url : myUrls) {
+        boolean found = false;
+        for (final URL entryUrl : entry.myUrls) {
+          if (url.equals(entryUrl)) {
+            found = true;
+            break;
+          }
+        }
+        if (!found) return false;
+      }
+      return true;
+    }
+  }
+
+  private static class ClassCache extends ObjectCache<ClassEntry, SoftReference<Class>> {
+
+    public ClassCache() {
+      super(256);
+    }
+
+    @Nullable
+    public final synchronized Class getClass(@NotNull final URL[] urls, @NotNull final String classname) {
+      final ClassEntry key = new ClassEntry(urls, classname);
+      final SoftReference<Class> ref = tryKey(key);
+      final Class result = (ref == null) ? null : ref.get();
+      if (result == null && ref != null) {
+        remove(key);
+      }
+      return result;
+    }
+
+    public final synchronized void setClass(@NotNull final URL[] urls, @NotNull final String classname, @NotNull final Class clazz) {
+      cacheObject(new ClassEntry(urls, classname), new SoftReference<Class>(clazz));
     }
   }
 }
